[package]
name = "envpath"
version = "0.0.1-alpha.16"
edition = "2021"
license = "Apache-2.0"
authors = ["Moe <m@tmoe.me>"]
readme = "Readme.md"
repository = "https://github.com/2moe/envpath"
description = """
A library for parsing and deserialising paths with special rules.
The format is similar to `["$proj(com.xy.z): data ? cfg", "$const: pkg"]`
"""

[features]
default = ["const-dirs", "base-dirs", "project-dirs"]
# default = ["all"]
base-dirs = ["dep:dirs"]
project-dirs = ["dep:directories"]
const-dirs = []
serde = ["dep:serde"]
rand = ["dep:rand"]
value = []
all = ["base-dirs", "project-dirs", "const-dirs", "serde", "rand", "value"]

[dependencies]
directories = { version = "5.0.0", optional = true }
dirs = { version = "5.0.0", optional = true }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.159", optional = true }

[dev-dependencies]
# anyhow = "1.0.69"
ron = "0.8.0"
serde = { version = "1.0.159", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
default-targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--document-private-items"]
