[package]
name = "envpath"
version = "0.0.1-beta.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Moe <m@tmoe.me>"]
readme = "Readme.md"
repository = "https://github.com/2moe/envpath"
description = """
A library for parsing and deserialising paths with special rules.
The format is similar to `["$proj(com.xy.z): data ? cfg", "$const: os", "$val: rand-16"]`
"""

[features]
default = ["consts", "dirs", "project"]
# default = ["all"]
dirs = ["dep:dirs"]
project = ["dep:directories"]
consts = []
serde = ["dep:serde"]
rand = ["dep:rand"]
value = []
all = ["dirs", "project", "consts", "serde", "rand", "value"]

[dependencies]
directories = { version = "5.0.0", optional = true }
dirs = { version = "5.0.0", optional = true }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.159", optional = true }

[dev-dependencies]
ron = "0.8.0"
serde = { version = "1.0.159", features = ["derive"] }
anyhow = "1.0.70"

[package.metadata.docs.rs]
all-features = true
default-targets = ["x86_64-unknown-linux-gnu"]
# rustdoc-args = ["--document-private-items"]
